--- a/src/app/projekt-navi/messages/all-messages/all-messages.component.html
+++ b/src/app/projekt-navi/messages/all-messages/all-messages.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <p-table [value]="messages" selectionMode="single" [(selection)]="selectedMessage" dataKey="id" styleClass="p-datatable-sm">
+  <p-table [value]="ReceivedMessages" selectionMode="single" [(selection)]="selectedMessage" dataKey="id" styleClass="p-datatable-sm">
     <ng-template pTemplate="header">
       <tr>
         <th>Od</th>
@@ -8,12 +8,12 @@
         <th>Kategoria</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-message>
-      <tr [pSelectableRow]="message">
-        <td></td>
-        <td>{{message.title}}</td>
-        <td>{{message.addingDate}}</td>
-        <td>{{message.id}}</td>
+    <ng-template pTemplate="body" let-ReceivedMessages>
+      <tr [pSelectableRow]="ReceivedMessages">
+        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.personName}} {{ReceivedMessages.dataMessages.personLastName}}</span> </td>
+        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.header.title}}</span></td>
+        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.header.timestamp}}</span></td>
+        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.category}}</span></td>
       </tr>
     </ng-template>
   </p-table>
