--- a/src/app/projekt-navi/messages/one-message/one-message.component.html
+++ b/src/app/projekt-navi/messages/one-message/one-message.component.html
@@ -25,6 +25,15 @@
   </div>
 </div>
 
+<div class="card">
+  <div class="p-fluid">
+    <div class="p-field">
+      <div></div>
+    </div>
+  </div>
+  </div>
+
+  <div id="test"></div>
 
 
 
