--- a/src/app/projects-list/projects-list.component.html
+++ b/src/app/projects-list/projects-list.component.html
@@ -11,6 +11,9 @@
         <button class="button" (click)="showDialog(); getOneProjekt(projekt.id)">
           Szczegóły
         </button>
+      <button class="button" (click)="openProject('projekt-navi', projekt.id)">
+          Otwórz
+        </button>
       </span>
     </li>
   </ul>
@@ -32,6 +35,7 @@
     Dodaj
   </button>
 </div>
+
 
 <p-dialog header="Opis projektu" [(visible)]="display" [style]="{width: '50vw'}">
   {{oneprojekt_detail.description}}
