--- a/src/app/projekt-navi/messages/messages.component.html
+++ b/src/app/projekt-navi/messages/messages.component.html
@@ -1,11 +1,32 @@
 
 
-<mat-tab-group text="accent" color="accent" animationDuration="500ms">
-  <mat-tab label="test"><app-one-message></app-one-message></mat-tab>
-  <mat-tab label="Wiadomości"><app-all-messages></app-all-messages></mat-tab>
-  <mat-tab label="Wysłane wiadomości"><app-sent-messages></app-sent-messages></mat-tab>
-  <mat-tab label="Przypięte wiadomości"><app-pin-messages></app-pin-messages></mat-tab>
-  <mat-tab label="Nowa wiadomość"><app-new-message></app-new-message></mat-tab>
-  <mat-tab label="Książka adresowa"><app-custom-messages></app-custom-messages></mat-tab>
-</mat-tab-group>
+<nav mat-tab-nav-bar animationDuration="500ms">
+  <a mat-tab-link (click)="OpenLink('ReceivedMessages')" class="list_messages">
+      <i class="pi pi-inbox"></i>
+      &nbsp;Wiadomości
+  </a>
+  <a mat-tab-link (click)="OpenLink('SentMessages')" class="list_messages">
+    <i class="pi pi-send"></i>
+    &nbsp;Wysłane wiadomości</a>
+  <a mat-tab-link (click)="OpenLink('NewMessage')" class="list_messages">
+    <i class="pi pi-pencil"></i>
+    &nbsp;Nowa wiadomość
+  </a>
+  <a mat-tab-link (click)="OpenLink('PinMessages')" class="list_messages">
+    <i class="pi pi-tags"></i>
+    &nbsp;Przypięte wiadomości
+  </a>
+  <a mat-tab-link (click)="OpenLink('CustomMessages')" class="list_messages">
+    <i class="pi pi-users"></i>
+    &nbsp;Książka adresowa
+  </a>
+  <a mat-tab-link (click)="OpenLink('OneMessage')" class="list_messages">
+    <i class="pi pi-inbox"></i>
+    &nbsp;Wiadomości
+  </a>
+</nav>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
 
