--- a/src/app/projekt-navi/messages/all-messages/all-messages.component.html
+++ b/src/app/projekt-navi/messages/all-messages/all-messages.component.html
@@ -1,19 +1,22 @@
+
+<app-paginator (newPaginator)="filterMessages($event)" [totalMessages]="totalMessages"></app-paginator>
+
 <div class="card">
-  <p-table [value]="ReceivedMessages" selectionMode="single" [(selection)]="selectedMessage" dataKey="id" styleClass="p-datatable-sm">
+  <p-table [value]="ReceivedMessages" selectionMode="single" [(selection)]="selectedMessage" styleClass="p-datatable-sm" (onRowSelect)="onRowSelect($event)">
     <ng-template pTemplate="header">
       <tr>
-        <th>Od</th>
+        <th>Od (Ostatnia odpowiedź)</th>
         <th>Tytuł</th>
         <th>Data</th>
         <th>Kategoria</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-ReceivedMessages>
-      <tr [pSelectableRow]="ReceivedMessages">
-        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.personName}} {{ReceivedMessages.dataMessages.personLastName}}</span> </td>
-        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.header.title}}</span></td>
-        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.dataMessages.header.timestamp}}</span></td>
-        <td><span [ngClass]="ReceivedMessages.opened == false ? 'opened' : 'unopened'">{{ReceivedMessages.category}}</span></td>
+    <ng-template pTemplate="body" let-ReceivedMessage>
+      <tr [pSelectableRow]="ReceivedMessage">
+        <td><span *ngFor="let person of ReceivedMessage.toPersons" [ngClass]="ReceivedMessage.opened == false ? 'opened' : 'unopened'">{{person.personName}}</span> </td>
+        <td><span [ngClass]="ReceivedMessage.opened == false ? 'opened' : 'unopened'">{{ReceivedMessage.title}}</span></td>
+        <td><span [ngClass]="ReceivedMessage.opened == false ? 'opened' : 'unopened'">{{ReceivedMessage.timestamp}}</span></td>
+        <td><span [ngClass]="ReceivedMessage.opened == false ? 'opened' : 'unopened'">{{ReceivedMessage.category.category}}</span></td>
       </tr>
     </ng-template>
   </p-table>
