--- a/src/app/projekt-navi/messages/sent-messages/sent-messages.component.css
+++ b/src/app/projekt-navi/messages/sent-messages/sent-messages.component.css
@@ -1,9 +1,11 @@
 .opened {
-
-    font-weight: bold;
-
+  font-weight: bold;
 }
 
 .unopened {
   font-weight: normal;
+}
+
+.pinned {
+  float: right;
 }
